--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.2",
     "google-maps-react": "^2.0.6",
+    "pdf2pic": "^2.1.4",
+    "pdfjs-dist": "^2.12.313",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-pdf": "^5.6.0",
+    "react-pdf-to-image": "^1.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
