--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.6.3",
+    "firebase": "^9.7.0",
     "google-maps-react": "^2.0.6",
     "pdf2pic": "^2.1.4",
     "pdfjs-dist": "^2.12.313",
@@ -15,8 +15,8 @@
     "react-icons": "^4.3.1",
     "react-pdf": "^5.6.0",
     "react-pdf-to-image": "^1.0.2",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
